[gd_scene load_steps=17 format=3 uid="uid://cmx1ur1ldwu0r"]

[ext_resource type="Script" path="res://scripts/Enemy.gd" id="1_en2m3"]
[ext_resource type="Script" path="res://resources/effects/hurt/DisplayDamagedHurtEffect.gd" id="2_5cab0"]
[ext_resource type="Script" path="res://resources/effects/hurt/BlinkHurtEffect.gd" id="3_fc1qb"]
[ext_resource type="Script" path="res://resources/effects/hurt/ThrowParticulesHurtEffect.gd" id="4_jnsok"]
[ext_resource type="Script" path="res://resources/effects/custom/FallDownEffect.gd" id="5_4t8vb"]
[ext_resource type="Script" path="res://resources/effects/custom/DropXpResource.gd" id="6_xynta"]
[ext_resource type="Resource" uid="uid://cnc58o31w371e" path="res://resources/stats/custom/enemies/bat/enemy_stat_controller_entity.tres" id="7_5bo6x"]
[ext_resource type="PackedScene" uid="uid://bfj5yk1srxw22" path="res://components/2d/physics/VelocityComponent2D.tscn" id="8_8kd0n"]
[ext_resource type="PackedScene" uid="uid://b5iiqlwia7sr7" path="res://components/2d/physics/HitboxComponent2D.tscn" id="9_oxsqc"]
[ext_resource type="PackedScene" uid="uid://ba7h2fb8j5vre" path="res://components/2d/physics/HurtboxComponent2D.tscn" id="10_7l7tu"]
[ext_resource type="PackedScene" uid="uid://b26iygcwph1nu" path="res://components/HealthComponent.tscn" id="11_ishdw"]
[ext_resource type="PackedScene" uid="uid://bq8wq02iaxh0b" path="res://assets/characters/enemies/32x32-bat-sprite.ase" id="12_c0d1x"]
[ext_resource type="PackedScene" uid="uid://b1navm80qbjks" path="res://components/2d/ia/FollowTargetComponent2D.tscn" id="13_3cu1a"]
[ext_resource type="Script" path="res://components/2d/weapon/WeaponSlotComponent2D.gd" id="14_yhrw1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jaqne"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sth8j"]
radius = 6.0

[node name="Enemy" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 2
collision_mask = 2
motion_mode = 1
slide_on_ceiling = false
floor_constant_speed = true
script = ExtResource("1_en2m3")
hurt_effects = Array[Resource]([ExtResource("2_5cab0"), ExtResource("3_fc1qb"), ExtResource("4_jnsok")])
die_effects = Array[Resource]([ExtResource("5_4t8vb"), ExtResource("6_xynta")])
stats_controller = ExtResource("7_5bo6x")

[node name="VelocityComponent" parent="." instance=ExtResource("8_8kd0n")]
MAX_SPEED = 80.0
SPEED_FACTOR = 35.0

[node name="HitboxComponent" parent="." instance=ExtResource("9_oxsqc")]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_jaqne")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("10_7l7tu")]
shape = SubResource("CircleShape2D_sth8j")
one_way_collision_margin = 16.0
health_component = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("11_ishdw")]

[node name="SpriteComponent" parent="." instance=ExtResource("12_c0d1x")]
scale = Vector2(0.5, 0.5)

[node name="FollowTargetComponent" parent="." node_paths=PackedStringArray("velocity_component") instance=ExtResource("13_3cu1a")]
velocity_component = NodePath("../VelocityComponent")

[node name="WeaponSlotComponent" type="Node2D" parent="."]
script = ExtResource("14_yhrw1")
collision_layer = 8
collision_mask = 4
